<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backFragment"
    android:orientation="vertical"
    tools:context="com.deasystem.daniel.bitcoinsimpleconverter.FragMain">
    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ads:layout_constraintBottom_toBottomOf="@+id/txt_vl_venda_bitcointoyou"
            ads:layout_constraintEnd_toStartOf="@+id/textView39"
            ads:layout_constraintStart_toStartOf="@+id/textView39"
            ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_bitcointoyou">

            <Button
                android:id="@+id/btn_walltime"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_walltime"
                android:textColor="@android:color/background_light"
                android:textSize="11sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/textView38" />

            <Button
                android:id="@+id/btn_mercadobitcoin"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_mercadobitcoin"
                android:textColor="@android:color/background_light"
                android:textSize="11sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/btn_walltime" />

            <Button
                android:id="@+id/btn_braziliex"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_braziliex"
                android:textColor="@android:color/background_light"
                android:textSize="11sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/btn_mercadobitcoin" />

            <Button
                android:id="@+id/btn_bitcointoyou"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_bitcointoyou"
                android:textColor="@android:color/background_light"
                android:textSize="11sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/btn_braziliex" />

            <Button
                android:id="@+id/btn_bitcointrade"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_bitcointrade"
                android:textColor="@android:color/background_light"
                android:textSize="11sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/btn_bitcointoyou" />

            <Button
                android:id="@+id/btn_negociecoin"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_negociecoins"
                android:textColor="@android:color/background_light"
                android:textSize="12sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/btn_bitcointrade" />

            <!-- Valor Walltime Compra/Venda -->

            <TextView
                android:id="@+id/txt_vl_compra_walltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_walltime"
                ads:layout_constraintTop_toBottomOf="@+id/textView39" />

            <TextView
                android:id="@+id/txt_vl_venda_walltime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/string_valor_venda"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_walltime"
                ads:layout_constraintTop_toBottomOf="@+id/textView40" />

            <!-- Valor MercadoBitcoin Compra/Venda -->
            <TextView
                android:id="@+id/txt_vl_compra_mercadobitcoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_mercadobitcoin"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_compra_walltime" />

            <TextView
                android:id="@+id/txt_vl_venda_mercadobitcoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/string_valor_venda"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_mercadobitcoin"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_walltime" />

            <!-- Valor Foxbit Compra/Venda -->
            <TextView
                android:id="@+id/txt_vl_compra_foxbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_braziliex"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_compra_mercadobitcoin" />

            <TextView
                android:id="@+id/txt_vl_venda_foxbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="R$0,00"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_foxbit"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_mercadobitcoin" />

            <!-- Valor BitCoinToYou Compra/Venda -->
            <TextView
                android:id="@+id/txt_vl_compra_bitcointoyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_bitcointoyou"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_compra_foxbit" />

            <TextView
                android:id="@+id/txt_vl_venda_bitcointoyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/string_valor_venda"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_bitcointoyou"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_foxbit" />

            <!-- Valor BitCoinTrade Compra/Venda -->
            <TextView
                android:id="@+id/txt_vl_compra_bitcointrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_bitcointrade"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_compra_bitcointoyou" />

            <TextView
                android:id="@+id/txt_vl_venda_bitcointrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="8dp"
                android:text="@string/string_valor_venda"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_bitcointrade"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_bitcointoyou" />

            <!-- Valor NegocieCoins Compra/Venda -->
            <TextView
                android:id="@+id/txt_vl_compra_negociecoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="12dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_negociecoin"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_compra_bitcointrade" />

            <TextView
                android:id="@+id/txt_vl_venda_negociecoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/string_valor_venda"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_negociecoins"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_bitcointrade" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_exchange"
                android:textColor="@color/colorFundo"
                android:textStyle="bold"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_compra"
                android:textColor="@color/colorCompra"
                android:textStyle="bold"
                ads:layout_constraintStart_toEndOf="@+id/textView38"
                ads:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="72dp"
                android:layout_marginTop="24dp"
                android:text="@string/txt_venda"
                android:textColor="@color/colorVenda"
                android:textStyle="bold"
                ads:layout_constraintStart_toEndOf="@+id/textView39"
                ads:layout_constraintTop_toTopOf="parent" />


            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="4dp"
                ads:adSize="BANNER"
                ads:adUnitId="@string/codigoAdmob"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

            <Button
                android:id="@+id/btn_broker"
                android:layout_width="88dp"
                android:layout_height="43dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/botoes"
                android:text="@string/txt_broker"
                android:textColor="@android:color/background_light"
                android:textSize="11sp"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toBottomOf="@+id/btn_negociecoin" />

            <TextView
                android:id="@+id/txt_vl_compra_broker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginTop="12dp"
                android:text="@string/string_valor"
                android:textColor="@color/colorCompra"
                android:textSize="16sp"
                ads:layout_constraintStart_toEndOf="@+id/btn_broker"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_compra_negociecoins" />

            <TextView
                android:id="@+id/txt_vl_venda_broker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:text="@string/string_valor_venda"
                android:textColor="@color/colorVenda"
                android:textSize="16sp"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toEndOf="@+id/txt_vl_compra_broker"
                ads:layout_constraintTop_toBottomOf="@+id/txt_vl_venda_negociecoins" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>
